2008-03-10 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.22.1

2008-03-10 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.22.0 release.

2008-02-24 Gerd Kohlberger <gerdk@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.22.0

2008-02-24 Gerd Kohlberger <gerdk@svn.gnome.org>

	* NEWS: Prepare 2.21.92 release.

2008-02-13 Gerd Kohlberger <gerdk@svn.gnome.org>
	* configure.ac: Add bugzilla info.
	* README: Remove launchpad bug info.

2008-02-10 Gerd Kohlberger <gerdk@svn.gnome.org>
	* configure.ac:
	* README:

	Post release version bump: 2.21.92

2008-02-10 Gerd Kohlberger <gerdk@svn.gnome.org>
	* NEWS: Prepare 2.21.91 release.

2008-02-09 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/*: Update copyright.

2008-02-06 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-common.h: Use proper dbus naming conventions.
	* data/DwellClick_Factory.server.in.in: Set bonobo environment. 

2008-02-06 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/dwell-click-applet.c: Add some error checking.

2008-02-05 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-ctw.c: 
	* data/ctw.glade:
	
	Fix input focus handling in click-type window.

2008-02-04 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-main.c: Improve --shutdown handling.

2008-02-04 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/Makefile.am: Remove some CFLAGS to be buildable on Solaris. 

	Fixes bug #188872 (launchpad). Patch by Li Yuan.

2008-01-31 Gerd Kohlberger <gerdk@svn.gnome.org>
	* src/mt-main.c: Fix critical gconf error.
	Threshold option is integer, not float.

2008-01-27 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version increment to 2.21.91

2008-01-27 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS:

	Prepare for 2.21.90 release 

2008-01-22 Gerd Kohlberger <gerdk@svn.gnome.org>
	* man/mousetweaks.1
	* man/dwell-click-applet.1
	* man/pointer-capture-applet.1
	