@@ -1,3 +1,8 @@
+2008-04-06 Gerd Kohlberger <gerdk@svn.gnome.org>
+
+	* src/Makefile.am: LDFLAGS -> LDADD.
+	Make sure '-Wl,--as-needed' works correctly. Fixes bug #525032.
+
 2008-03-10 Francesco Fumanti <frfumanti@svn.gnome.org>
 
 	* configure.ac:
